# releaf-canopeum

./: .dprint.jsonc  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  docker-compose.yml  dprint.json  package-lock.json  package.json  pyrightconfig.json  start-local-env.ps1
.devcontainer/: devcontainer.env  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
canopeum_backend/: .gitignore  Dockerfile  canopeum-mockoon.json  db.sqlite3  docker-entrypoint.sh  manage.py  mypy.ini  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test.py
canopeum_backend/canopeum_backend/: asgi.py  bdd.sql  docker-entrypoint.sh  models.py  permissions.py  serializers.py  settings.py  test.py  urls.py  views.py  wsgi.py
canopeum_backend/canopeum_backend/management/commands/: initialize_database.py
canopeum_backend/canopeum_backend/migrations/: 0001_initial.py  0002_add_is_public_to_site.py  0002_alter_batch_size.py  0002_alter_fertilizertype_name_alter_mulchlayertype_name_and_more.py  0002_alter_role_name.py  0002_alter_user_role.py  0002_batch_image_batch_plant_count_batch_replace_count_and_more.py  0002_initial.py  0002_like.py  0002_make_like_post_relation_foreignkey.py  0002_remove_batch_total_number_seed.py  0002_remove_post_like_count.py  0002_remove_post_share_count.py  0002_user_main_field_changed_from_username_to_email.py  0003_alter_like_user.py  0003_make_comment_fields_non_nullable.py  0003_make_site_name_required.py  0003_merge_20241114_1218.py  0003_post_share_count_site_visitor_count.py  0003_unique_constraints_for_batch_and_site.py  0003_update_input_fields_char_limits.py  0004_alter_post_body_alter_post_media_alter_post_site.py  0004_create_site_follower_joined_table.py  0004_internationalization_batchseed_batchspecies_and_more.py  0004_make_user_role_text_choices.py  0004_remove_batch_image_batchasset.py  0004_remove_setting_blank_with_date_auto.py  0005_alter_batchasset_asset.py  0005_create_batch_sponsor_with_image_and_relations.py  0005_create_site_follower_joined_table.py  0005_made_batch_join_tables_properties_non_nullable.py  0005_remove_batchsupportedspecies_quantity_and_more.py  0006_alter_batch_site.py  0006_asset_remove_siteimage_image_remove_postimage_image_and_more.py  0006_make_post_created_at_auto_on_add.py  0006_make_properties_non_nullable.py  0007_alter_batch_site.py  0007_change_role_enum_admin_to_site_manager.py  0007_remove_admin_option_in_role_enum.py  0007_site_image_alter_asset_asset_delete_siteasset.py  (+5 more)
canopeum_backend/canopeum_backend/utils/: weather_service.py
canopeum_backend/env/: pyvenv.cfg
canopeum_backend/env/Scripts/: activate  activate.bat
canopeum_backend/scripts/: checkers.py
canopeum_frontend/: .dockerignore  .env  .env.production  .eslint.json  .eslintrc.cjs  .gitignore  Dockerfile  apiSchemaGenerator.js  canopeum-mockoon.json  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
carbone_quebec_backend/: manage.py
carbone_quebec_frontend/: .gitignore  (+4 more)
(+263 files in other folders)
