[project]
name = "Canopeum"
version = "0.0.0"
requires-python = "== 3.12"
dependencies = [
  "Django>=5.0.8",
  # Fix for https://github.com/BesLogic/releaf-canopeum/security/dependabot/25
  "dj-database-url",
  "django-cors-headers",
  "djangorestframework-camel-case",
  "djangorestframework-simplejwt>=5.4.0",
  # TODO: Bump above 5.3.1 as soon as fixed for https://github.com/BesLogic/releaf-canopeum/security/dependabot/3
  "djangorestframework>=3.15.2",
  # Fix for https://github.com/BesLogic/releaf-canopeum/security/dependabot/15
  "drf-spectacular-sidecar",
  "drf-spectacular>=0.27.2",
  # https://github.com/tfranzel/drf-spectacular/pull/1216
  "googlemaps",
  "mysqlclient",
  "openmeteo-requests>=1.3.0",
  "python-dotenv",
  "requests-cache>=1.2.1",
  "retry-requests>=2.0.0",
]
[dependency-groups]
dev = [
  # Tools
  "mypy[faster-cache]", # version taken from [compatible-mypy],
  "pyright>=1.1.374",
  "ruff~=0.7.4",
  # Stubs
  "django-stubs[compatible-mypy]>=5.0.0",
  "djangorestframework-stubs[compatible-mypy]>=3.15.0",
  "types-jsonschema",
]
