[project]
name = "Canopeum"
version = "0.0.0"
requires-python = "== 3.13.*"
dependencies = [
  "Django>=5.1.3", # Python 3.13 support
  "dj-database-url",
  "django-cors-headers",
  "djangorestframework-camel-case",
  "djangorestframework-simplejwt>=5.4.0", # Typing fixes
  "djangorestframework>=3.16.0", # Python 3.13 support
  "drf-spectacular-sidecar",
  "drf-spectacular>=0.27.2", # https://github.com/tfranzel/drf-spectacular/pull/1216
  "googlemaps",
  "mysqlclient>=2.2.5", # Python 3.13 wheels on Windows
  "openmeteo-requests>=1.3.0",
  "python-dotenv",
  "requests-cache>=1.2.1",
  "retry-requests>=2.0.0",
]
[dependency-groups]
dev = [
  # Tools
  "mypy[faster-cache]", # version taken from [compatible-mypy],
  "pyright>=1.1.374",
  "ruff~=0.7.4",
  # Stubs
  "django-stubs[compatible-mypy]>=5.1.3",
  "djangorestframework-stubs[compatible-mypy]>=3.16.0",
  "types-jsonschema",
]
