[project]
name = "Canopeum"
version = "0.0.0"
requires-python = "== 3.12.*"
dependencies = [
  "Django>=5.1.10", # Vulnerability fix
  "dj-database-url",
  "django-cors-headers",
  "djangorestframework-camel-case",
  "djangorestframework-simplejwt>=5.4.0",
  "djangorestframework>=3.15.2", # Vulnerability fix
  "drf-spectacular-sidecar",
  "drf-spectacular>=0.27.2", # https://github.com/tfranzel/drf-spectacular/pull/1216
  "googlemaps",
  "mysqlclient>=2.2.5", # Python 3.13 wheels on Windows
  "openmeteo-requests>=1.3.0",
  "python-dotenv",
  "requests-cache>=1.2.1",
  "retry-requests>=2.0.0",
]
[dependency-groups]
dev = [
  # Tools
  "mypy[faster-cache]", # version taken from [compatible-mypy],
  "pyright>=1.1.374",
  "ruff~=0.7.4",
  # Stubs
  "django-stubs[compatible-mypy]>=5.0.0",
  "djangorestframework-stubs[compatible-mypy]>=3.15.0",
  "types-jsonschema",
]

[tool.uv-secure.maintainability_criteria]
forbid_yanked = true
